infrastructure/controllers/staging/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.simeonivanov.org`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: dashboard-auth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
